# cdwilson-sampleproject

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
cdwilson-sample/: __init__.py
cdwilson_sample/: __init__.py  __main__.py  cli.py
